# -Claude-RAG-Agent

./: README.md
claude-rag-agent/: app.py  pyproject.toml  requirements.txt
claude-rag-agent/data/sample_docs/: company_handbook.txt
claude-rag-agent/scripts/: cli_demo.py
claude-rag-agent/src/: __init__.py  app.py  config.py
claude-rag-agent/src/agent/: claude_agent.py  tools.py
claude-rag-agent/src/embeddings/: embedder.py
claude-rag-agent/src/ingestion/: document_loader.py
claude-rag-agent/src/retrieval/: retriever.py
claude-rag-agent/src/vectorstore/: faiss_store.py
claude-rag-agent/tests/: test_agent_tools.py  test_claude_agent.py  test_document_loader.py  test_embedder.py  test_retriever.py  test_vectorstore.py
